app/src/main/java/com/example/negativeion/Attribute.java
package com.example.negativeion;

public class Attribute {
    public static String USER_PHOTOURL = "User photoUrl";
    public static String USER_NAME = "User name";
    public static String USER_ID = "userId";//與上傳至php的key一樣
    public static String DEVICE_ID = "deviceId";//與上傳至php的key一樣
    public static String DEVICE_NAME = "deviceName";//與上傳至php的key一樣
    public static String RELAY_ID = "relayId";
    public static String RELAY = "relay";

    public static int RECEIVED_DEIVCE_ID_CODE = 78; //Can only use lower 16 bits for requestCode
}
